2006-04-21  Brian Gough  <bjg@network-theory.co.uk>

	* qrng.c gsl_qrng.h: use q instead of r in all prototypes

2004-05-26  Brian Gough  <bjg@network-theory.co.uk>

	* test.c: added <stdlib.h> for exit()

2002-11-16  Brian Gough  <bjg@network-theory.co.uk>

	* niederreiter-2.c (calculate_cj): clear uninitialized memory

Mon Apr 22 19:20:05 2002  Brian Gough  <bjg@network-theory.co.uk>

	* test.c:  output results for each individual test

	* qrng.c (gsl_qrng_init): added missing init function

Mon Oct 23 19:59:46 2000  Brian Gough  <bjg@network-theory.co.uk>

	* qrng.c (gsl_qrng_get): use an array type for the array
 	arguments, rather than a pointer
